err/dlbot.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2015.04.28.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dlbot-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/dlcli'...
Listing './lib/python3.5/site-packages/dlcli/api'...
Compiling './lib/python3.5/site-packages/dlcli/api/dashboards.py'...
***   File "./lib/python3.5/site-packages/dlcli/api/dashboards.py", line 27
    print "restoring dashboard %s" % dashboard_name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dlcli/api/plugins.py'...
***   File "./lib/python3.5/site-packages/dlcli/api/plugins.py", line 35
    print "restoring plugin %s" % plugin_name
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dlcli/api/utils.py'...
***   File "./lib/python3.5/site-packages/dlcli/api/utils.py", line 51
    print colored(str(row[0]), 'green')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dlcli/cli'...
Compiling './lib/python3.5/site-packages/dlcli/cli/cli.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/cli.py", line 98
    print "Not a valid key! Please generate an API token at https://app.dataloop.io/#/user-account/api-tokens"
                                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dlcli/cli/create.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/create.py", line 22
    print user_api.create_user_token(token_name=name, **context.settings)['token']
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/get.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/get.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/graph.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/graph.py", line 39
    print "Min: %d Max: %d Avg: %d  %s " % (min(points), max(points), sum(points)/len(points), sparkline.sparkify(points).encode('utf-8'))
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/install.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/install.py", line 46
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/pull.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/pull.py", line 23
    print dashboards_api.export_dashboard(dashboard=dashboard, **context.settings)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/push.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/push.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/restore.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/restore.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/rm.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/rm.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/run.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/run.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/search.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/search.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/set.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/set.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dlcli/cli/source.py'...
***   File "./lib/python3.5/site-packages/dlcli/cli/source.py", line 33
    print agents_api.register_agent(payload=payload, finger=finger, **context.settings)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dlcli-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/serializer'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib/trie'...
Listing './lib/python3.5/site-packages/html5lib-0.9999999.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/limbo'...
Listing './lib/python3.5/site-packages/limbo/plugins'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfiglet'...
Listing './lib/python3.5/site-packages/pyfiglet/fonts'...
Listing './lib/python3.5/site-packages/pyfiglet-0.7.4.egg-info'...
Listing './lib/python3.5/site-packages/pysparklines-0.9.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slackrtm'...
Listing './lib/python3.5/site-packages/slackrtm-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/sparkline'...
Compiling './lib/python3.5/site-packages/sparkline/sparkline.py'...
***   File "./lib/python3.5/site-packages/sparkline/sparkline.py", line 80
    print version
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/terminaltables'...
Listing './lib/python3.5/site-packages/terminaltables-3.1.0.egg-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.35.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
